# Point-OF-Sale

./: NEXT_STEPS.md  PROJECT-DRAFT.md  README.md  docker-compose.dev.yml  run_app.ps1
backend/: .env.example  Retail POS Backend (E2E Suite) latest.postman_test_run  Retail POS Backend (E2E Suite).postman_test_run.json  Retail POS Backend (E2E Suite)2.postman_test_run  Retail POS Backend (E2E Suite-1).postman_test_run  endpoints.txt  postman-e2e-collection.json  postman-env.local.e2e.json  postman-env.local.full.json  postman-env.local.json  postman-full-collection.json  postman-smoke-collection.json  pyproject.toml  pytest.ini  test.db  tmp_auth_checks.py
backend/alembic/: env.py
backend/alembic/versions/: 0005_create_product_import_tables.py  0009_add_customer_to_sales.py  2a7bd182147b_create_payments_table.py  3213c39da6e6_create_promotions_table.py  4ae8e28625e1_merge_multiple_heads.py  7334b3c4522e_create_sale_payments_table.py  9c3a0d87d812_add_gift_card_fields_to_sale_payments.py  c03c378685db_create_gift_cards_table.py  d4f8e2a1b3c5_create_cash_drawer_and_shift_tables.py  e7f9a3b2c4d6_add_idempotency_keys_table.py  e8d28c25aa2b_create_receipts_table.py  f8a1b2c3d4e5_create_report_builder_tables.py  g1h2i3j4k5l6_add_tenant_id_to_all_business_tables.py  h2i3j4k5l6m7_add_customer_engagement_tables.py  i3j4k5l6m7n8_add_webhook_system_tables.py  j4k5l6m7n8o9_add_product_supplier_links.py  k5l6m7n8o9p0_add_receiving_tables.py  l6m7n8o9p0q1_add_marketing_campaigns_tables.py  m7n8o9p0q1r2_increase_phone_column_for_encryption.py  n8o9p0q1r2s3_enhance_audit_log_fields.py  o9p0q1r2s3t4_add_api_keys_and_tenant_columns.py  p1q2r3s4t5u6_add_tenant_id_to_remaining_models.py  q2r3s4t5u6v7_add_gdpr_consent_fields_to_customers.py  r2s3t4u5v6w7_ensure_product_supplier_links_table.py  t1u2v3w4x5y6_add_missing_tenant_and_email_columns.py  u1v2w3x4y5z6_create_tenant_settings_table.py
backend/app/api/: main.py
backend/app/core/: data_masking.py  encryption.py  logging.py  settings.py  (+4 more)
backend/docker/: Dockerfile
backend/docs/: API_TEST_REPORT.md  POSTMAN_E2E_SUITE.md  POSTMAN_TEST_SUITE.md  pydantic-config-guidelines.md
backend/scripts/: api_test_suite.py  check_db.py  create_db.py  fix_alembic_version.py  generate_postman_collection.py  list_endpoints.py  patch_postman_collection_add_setup.py  patch_tenants_table.py  seed_local.py  truncate_customers.py  validate_schema.py  verify_phase11.py
backend/tests/: conftest.py
modern_client/: .auth_tokens.json  README.md  config.py  main.py  pyproject.toml
modern_client/components/: barcode_scanner.py  sidebar.py
modern_client/services/: api.py
modern_client/views/: employees.py  intelligence.py  login.py  pos.py  promotions.py  settings.py  users.py
super_admin_client/: config.py  main.py  main_v2.py  pyproject.toml
super_admin_client/components/: __init__.py  badge.py  data_table.py  dialogs.py  loading.py  sidebar.py  stat_card.py
super_admin_client/services/: api.py  api_v2.py  auth.py
super_admin_client/views/: __init__.py  analytics.py  compliance.py  dashboard.py  dashboard_v2.py  integrations.py  login.py  login_v2.py  monitoring.py  plans.py  settings.py  tenants.py
(+381 files in other folders)
